# python-matter-server

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  README.md  compose.yml  docker-compose.yml  docker-entrypoint.sh  index.html  main.py  pyproject.toml  requirements-test.txt  setup.cfg
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-web.yaml  docker-publish.yml  pr-labels.yaml  publish-to-pypi.yml  release-drafter.yml  release.yml  test.yml
chip_ws_client/: __main__.py  client.py
chip_ws_client/model/: device_controller.py  driver.py  version.py
chip_ws_common/: json_utils.py  wsmsg.py
chip_ws_server/: __main__.py  server.py
custom_components/matter_experimental/: __init__.py  adapter.py  binary_sensor.py  config_flow.py  const.py  device_platform.py  device_platform_helper.py  entity.py  entity_description.py  light.py  manifest.json  matter.py  node.py  sensor.py  services.yaml  storage.py  strings.json  switch.py  util.py
custom_components/matter_experimental/translations/: en.json
dashboard/: README.md  note.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
dashboard/public/: index.html
dashboard/script/: build  develop  setup
dashboard/src/client/: client-context.ts  client.ts  connection.ts  exceptions.ts
dashboard/src/client/models/: descriptions.ts  model.ts  node.ts
dashboard/src/components/: ha-svg-icon.ts
dashboard/src/components/dialog-box/: dialog-box.ts  show-dialog-box.ts
dashboard/src/components/dialogs/acl/: model.ts
dashboard/src/components/dialogs/binding/: model.ts  node-binding-dialog.ts  show-node-binding-dialog.ts
dashboard/src/components/dialogs/commission-node-dialog/: commission-node-dialog.ts  commission-node-existing.ts  commission-node-thread.ts  commission-node-wifi.ts  show-commission-node-dialog.ts
dashboard/src/entrypoint/: main.ts
dashboard/src/pages/: matter-cluster-view.ts  matter-dashboard-app.ts  matter-dashboard.ts  matter-endpoint-view.ts  matter-node-view.ts  matter-server-view.ts
dashboard/src/pages/components/: context.ts  footer.ts  header.ts  node-details.ts  server-details.ts
dashboard/src/util/: clone_class.ts  prevent_default.ts  routing.ts
docs/: docker.md  os_requirements.md  websockets_api.md
light-switch-app-example/esp32-c3/: manifest.json
lighting-app-example/esp32-c3/: manifest.json
matter_server/client/: __init__.py  __main__.py  adapter.py  client.py  connection.py  const.py  device.py  devices.py  exceptions.py  matter.py  node.py
matter_server/client/model/: device.py  device_controller.py  device_type_instance.py  devices.py  driver.py  endpoint_device_type_instance.py  event.py  node.py  node_device.py  read_subscriptions.py  subscription.py
matter_server/client/models/: __init__.py  clusters.py  device_type_instance.py  device_types.py  node.py  node_device.py
matter_server/common/: const.py  custom_clusters.py  errors.py  json_utils.py  models.py  util.py
matter_server/common/helpers/: api.py  json.py  logger.py  util.py
matter_server/common/model/: error.py  event.py  message.py  server_information.py  version.py
matter_server/common/models/: __init__.py  api_command.py  device.py  device_type_instance.py  device_types.py  error.py  events.py  message.py  node.py  node_device.py  server_information.py
matter_server/server/: __init__.py  __main__.py  active_connection.py  chip.py  client_handler.py  const.py  device_controller.py  device_controller_api.py  matter_stack.py  sdk.py  server.py  server_client.py  stack.py  storage.py  vendor_info.py  websocket.py
matter_server/server/helpers/: __init__.py  attributes.py  custom_web_runner.py  paa_certificates.py  utils.py  vendor_names.py
matter_server/server/ota/: __init__.py  dcl.py  provider.py
scripts/: beautify_diagnostics.py  chip_synchronize.py  dump_fixer.py  example.py  example_client.py  example_full.py  example_server.py  generate_descriptions.py  generate_devices.py  list_unmapped_devices.py  setup.sh  show_stored_node.py
tests/: ruff.toml  test_device_controller.py
tests/common/: json_utils.py  test_json_utils.py  test_parser.py  test_utils.py
tests/fixtures/: __init__.py
tests/fixtures/nodes/: _fake_template  contact-sensor-example-app.json  fake-bridge-two-light.json  fake-temperature-sensor.json  fake_color_temperature_light.json  fake_extended_color_light.json  fake_flow_sensor.json  fake_humidity_sensor.json  fake_light_sensor.json  fake_pressure_sensor.json  lighting-example-app.json  onoff-switch-example-app.json
tests/fixtures/nodes_in_ha/: contact-sensor-example-app.json  fake-bridge-two-light.json  fake-temperature-sensor.json  fake_color_temperature_light.json  fake_extended_color_light.json  fake_flow_sensor.json  fake_humidity_sensor.json  fake_light_sensor.json  fake_pressure_sensor.json  lighting-example-app.json  onoff-switch-example-app.json
tests/matter_experimental/: common.py  conftest.py  test_adapter.py  test_light.py  test_mapping.py
tests/server/: __init__.py  test_server.py  test_utils.py
tests/server/ota/: test_dcl.py
tests/server/ota/fixtures/: 4442-67-197888.json  4442-67-197910.json  4442-67-198340.json  4442-67.json  4447-8194-1000.json  4447-8194-1011-invalid.json  4447-8194-1011-valid.json  4447-8194.json
tests/test_utils/: mock_matter.py
