[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python-matter-server"
# The version is set by GH action on release
version = "0.0.0"
license     = {text = "Apache-2.0"}
description = "Python Matter WebSocket Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp",
  "aiorun",
  "async-timeout",
  "coloredlogs",
  "dacite",
  "orjson",
  "home-assistant-chip-clusters==2024.1.0"
]

[project.optional-dependencies]
server = [
  "home-assistant-chip-core==2024.1.0",
  "cryptography==42.0.2",
  "zeroconf==0.131.0"
]
test = [
  "black==23.12.1",
  "codespell==2.2.6",
  "flake8==7.0.0",
  "flake8-docstrings==1.7.0",
  "isort==5.13.2",
  "mypy==1.8.0",
  "pre-commit==3.6.0",
  "pre-commit-hooks==4.5.0",
  "pylint==3.0.3",
  "pytest==7.4.4",
  "pytest-aiohttp==1.0.5",
  "ruff==0.2.1",
  "safety==3.0.1"
]

[project.scripts]
matter-server = "matter_server.server.__main__:main"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.package-data]
matter_server = ["py.typed"]

[tool.setuptools.packages.find]
include = ["matter_server*"]

[tool.mypy]
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "orjson",
]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "S101", # assert is often used to satisfy type checking

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["matter_server"]

[tool.ruff.lint.mccabe]
max-complexity = 25
