[metadata]
name = python-chip-ws-server
author = Stefan Agner
description = Python CHIP WebSocket Server
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
version = 0.0.1
url = https://github.com/home-assistant-libs/python-chip-ws-server
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Environment :: Console
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Home Automation
license_files = LICENSE.txt

[options.entry_points]
console_scripts =
    chip-ws-server = chip_ws_server.__main__:main

[options]
python_requires = >= 3.9
install_requires =
  aiohttp
