[metadata]
name = python-matter-server
author = Stefan Agner
description = Python CHIP WebSocket Server
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
version = 0.0.1
url = https://github.com/home-assistant-libs/python-matter-server
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Environment :: Console
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Home Automation
license_files = LICENSE.txt

[options.entry_points]
console_scripts =
    matter-server = matter_server.server.__main__:main

[options]
packages = find:
python_requires = >= 3.9
install_requires =
  aiohttp

[options.packages.find]
include=matter_server*
exclude=matter_server.vendor

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
